tests/snapshots/regression/semantic_types__effects__incomplete_handler_error.snap
---
source: tests/integration/regression_snapshots.rs
---
$ flux --no-cache tests/fixtures/semantic_types/effects/incomplete_handler_error.flx
exit_code: 1

[ 1 of 12] Compiling  Assert
[ 2 of 12] Compiling  Debug
[ 3 of 12] Compiling  Array
[ 4 of 12] Compiling  List
[ 5 of 12] Compiling  Either
[ 6 of 12] Compiling  IO
[ 7 of 12] Compiling  Math
[ 8 of 12] Compiling  Numeric
[ 9 of 12] Compiling  Option
[10 of 12] Compiling  Primops
[11 of 12] Compiling  String
• 1 error • tests/fixtures/semantic_types/effects/incomplete_handler_error.flx
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: read.

  tests/fixtures/semantic_types/effects/incomplete_handler_error.flx:6:1
  |
6 | fn main() {
  | ^^^^^^^^^
  | --------- handled expression

Hint:
  Add 1 arm(s) to the handle block:

    read(resume) -> resume(/* : String */ todo!())

Tip: `resume(())` consumes the operation and discards its effect; use it when the handler only cares about observing the call.
